Fix title spacing

--- a/src/pages/Applicant/Companies/styles.module.scss
+++ b/src/pages/Applicant/Companies/styles.module.scss
@@ -10,6 +10,10 @@
   }
 }
 
+.title {
+  margin-bottom: $spacing-l;
+}
+
 .childrenContainer {
   display: flex;
   flex-direction: row;
